remove fixed size on kv-wrap-h1

--- a/src/custom kv site wordpress css.css
+++ b/src/custom kv site wordpress css.css
@@ -723,7 +723,7 @@ vertical-align: top;
 }
 
 .kv-wrap-h1 {
- height: 60px;
+
 }
 
 
